Add workflow diagram

--- a/docs/_chapters/000-front/030.draft-introduction.md
+++ b/docs/_chapters/000-front/030.draft-introduction.md
@@ -4,6 +4,45 @@ slug: introduction
 abstract: An example "draft" chapter.
 ---
 
+
+<!--
+
+``` plantuml 
+
+@startuml
+
+cloud  "Ancestry"  #lightblue { 
+  [Ancestry Portal] #lightblue 
+} 
+
+node "Computer" {
+  [RootMagic] #lightyellow
+  [g2book] #lightyellow
+ folder "GEDCOM" #lightgreen {
+ }
+ folder "TEX File" #lightgreen {
+ }
+ [pdflatex] #lightyellow
+ folder "PDF File" #lightgreen {
+ }  
+}
+
+[Ancestry Portal] -down-> [RootMagic] : Synchronize Data
+[RootMagic] -right-> [GEDCOM] : Export GEDCOM File
+[GEDCOM] -down-> [g2book] : Convert GEDCOM Files 
+[g2book] -right-> [TEX File] : Export Latex File
+[TEX File] -down-> [pdflatex] : Typeset the Latex input
+[pdflatex] -right-> [PDF File] : Generate Book as PDF
+@enduml
+```
+-->
+
+{% include figure.html
+    caption="General workflow."
+    url="/assets/images/Workflow.png"
+    class="row"
+%}
+
 See {% include chapter-link.html slug="draft" %} for more information.
 
 <!-- ---
