--- a/docs/_chapters/010-Introduction/035.draft-getting-started-miktex.md
+++ b/docs/_chapters/010-Introduction/035.draft-getting-started-miktex.md
@@ -1,6 +1,6 @@
 ---
 title: Getting started with MiKTeX
-slug: getting-started
+slug: getting-started-miktex
 abstract: A guide to quickly starting with MiKTeX.
 ---
 
