Working on the docu

--- a/docs/_chapters/900-Errors/012-GCP1002.md
+++ b/docs/_chapters/900-Errors/012-GCP1002.md
@@ -11,7 +11,7 @@ abstract: Error description for GCP1002.
 
 ## Details
 
-This error is happening, because the parser read a TAG in the GEDCOM file which is not described in the model.
+This warning is happening, because the parser read a TAG in the GEDCOM file which is not described in the model. This leads to tags which will be ignored.
 
 ## Background
 
